[project]
name = "clinical-implications-of-sepsis-definitions"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "kaleido>=0.2.1",
    "marimo>=0.18.4",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.0.0",
    "pyarrow>=22.0.0",
    "upsetplot>=0.9.0",
]
